Change the description

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*  
 Theme Name: Muse  
 Theme URI: http://wpspeak.com/themes/muse/  
-Description: museraphy theme for Genesis Framework
+Description: Photography theme for Genesis Framework
 Author: WPSpeak
 Author URI: http://wpspeak.com/ 
 Version: 1.0.0 
