--- a/style.css
+++ b/style.css
@@ -842,6 +842,15 @@ img.alignright,
 	display: none;
 }
 
+/* Exifography
+--------------------------------------------- */
+
+.exif {
+	background-color: #333;
+	color: #fff;
+	padding: 30px 15px;
+}
+
 
 /* Site Header
 ---------------------------------------------------------------------------------------------------- */
